[package]
name = "orderbook-imbalance-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2.5.0"
futures-util = "0.3.30"
ordered-float = "4.2.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "bigdecimal", "uuid" ] }
dotenv = "0.15"